RESOLVED FIXED233324
[IFC][Integration] Switching line layout path should invalidate preferred width
https://bugs.webkit.org/show_bug.cgi?id=233324
Summary [IFC][Integration] Switching line layout path should invalidate preferred width
alan
Reported 2021-11-18 12:01:21 PST
ssia
Attachments
Patch (1.69 KB, patch)
2021-11-18 12:05 PST, alan
no flags
alan
Comment 1 2021-11-18 12:05:28 PST
EWS
Comment 2 2021-11-18 13:14:14 PST
Committed r286024 (244413@main): <https://commits.webkit.org/244413@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444712 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-18 13:15:24 PST
Note You need to log in before you can comment on or make changes to this bug.