[IFC][Integration] Switching line layout path should invalidate preferred width https://bugs.webkit.org/show_bug.cgi?id=233324

Reviewed by Antti Koivisto.

Since we don't propagate intrinsic width values between the line layout codepaths, switching
should invalidate these dirty bits.

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::invalidateLineLayoutPath):



Canonical link: https://commits.webkit.org/244413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286024 268f45cc-cd09-0410-ab3c-d52691b4dbfc